# Arcade

./: CMakeLists.txt  README.md  setup.sh
.github/workflows/: ci.yml
doc/: doc.md
include/: DLLoader.hpp
include/core/: Arcade.hpp
include/interface/: IDLLoader.hpp  IDisplayModule.hpp  IGameModule.hpp  IMenuModule.hpp  IModule.hpp
include/module/: ADisplayModule.hpp  AGameModule.hpp
include/module/game/: SnakeGame.hpp  SolarfoxGame.hpp
include/module/graphic/: ALLEGRO5Display.hpp  NCURSESDisplay.hpp  SDL2Display.hpp
include/module/menu/: ArcadeMenu.hpp
lib/: lib.md
source/: main.cpp  source.md
source/core/: Arcade.cpp
source/module/: ADisplayModule.cpp  AGameModule.cpp
source/module/game/: SnakeGame.cpp  SolarfoxGame.cpp
source/module/graphic/: ALLEGRO5Display.cpp  NCURSESDisplay.cpp  SDL2Display.cpp
source/module/menu/: ArcadeMenu.cpp
tests/: MyTests.cpp
